=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=over

=item *

Changed the schema for the Krang::User XML format to make the new
'hidden' field optional.  This allows data files from pre-v1.017 Krang
to load in later Krangs. [Sam]

=item *

Fixed the v1.018 upgrade module to successfully upgrade instances from
v1.016 and older.  Also made changes to allow repeated runs of the
upgrade module to succeed even if the upgrade stops part way through.
[Sam]

=item *

Changed C<krang_upgrade> to wait till the upgrade is complete before
updating Krang's version number.  This means that failed upgrades can
be re-run and the same upgrade modules will be run again. [Sam]

=item *

Fixed Gentoo Platform tests so that any version of Gentoo 1.4.x now 
works. [Peter]

=item *

Fixed a bug in the error-handling section of Krang::Publisher that was
hiding the real cause of errors during publish.  [Peter]

=item *

Fixed broken --republish_only flag in bin/krang_publish. [Peter]

=item *

Changed the default of Krang::ElementClass::Date so that dates are updated 
when the default() method is called and not when new() is called.


=item *

Made Krang::Sotry::find(published=>1) work with stories that had a published 
version of 1/0 instead of NOT NULL / NULL.

=item *

Fixed Krang::XML::Writer to allow raw tabs in XML without Base64
encoding. [Sam]

=item *

Added a workaround for a very strange seg-fault bug.  [Sam]

=item *

Fixed bug where aftrer upgrading to v1.018 old users don't show up in
the User Admin list screen. [Sam]

=item *

Changed Krang::Site so that only the site's URL is required to be
unique.  Requiring all four fields to be unique, while seemingly
sensible, causes numerous problems during data imports.  If necessary
we could add these checks back in at the UI level in Krang::CGI::Site.
[Sam]

=item *

Fixed a bug in Krang::Contrib's full_name() that would add ", " to the